--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,6 +1,6 @@
 @import 'media.scss';
-// @import 'controllerMoves.scss';
-@import 'cartStart.scss';
+@import 'cards/cardStart.scss';
+@import 'cards/cardMenu.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
@@ -13,7 +13,6 @@
     font-style: normal;
     font-weight: 300;
     color: #fff;
-    // transition: .4s ease;
 }
 
 *::-webkit-scrollbar,
@@ -38,15 +37,19 @@ body{
     background-color: #000;
 }
 
-.app{
+#DonTraffic{
     width: 100vw;
     height: 100vh;
+    
     display: flex;
     justify-content: center;
     align-items: center;
+
+    overflow: hidden;
+    position: relative;
 }
 
-.cart{
+.card{
     position: absolute;
     margin: 0px auto;
     max-width: 700px;
@@ -62,7 +65,21 @@ body{
     justify-content: center;
     align-items: center;
 
-    transition: .4s ease;
+    transition: 1s ease;
+
+    &__content {
+        z-index: 2;
+    }
+
+    &__background{
+        z-index: 1;
+
+        position: absolute;
+        overflow: hidden;
+        
+        width: 100%;
+        height: 100%;
+    }
 
     @include phone {
         max-width: 100%;
@@ -76,13 +93,39 @@ body{
     }
 }
 
-// .icon-sun{
-//     height: 150px;
-//     width: 150px;
-//     background: #FFFFFF;
-//     box-shadow: 0px 0px 6px #FFFFFF;
-//     border-radius: 50%;  
-// }
+.card__position-bottom {
+    bottom: -30%;
+    @include phone {
+        bottom: -105%;
+    }
+} .card__position-top {
+    top: -30%;
+    @include phone {
+        top: -105%;
+    }
+} .card__position-right {
+    right: -30%;
+    @include phone {
+        right: -105%;
+    }
+} .card__position-left {
+    left: -30%;
+    @include phone {
+        left: -105%;
+    }
+}
+
+.icon-sun{
+    width: 150px;
+    height: 150px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 6px #FFFFFF;
+    border-radius: 50%;
+}
+
+.text-shadow {
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
 
 
 // .slide{
