--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,6 +1,10 @@
 @import 'media.scss';
+
 @import 'cards/cardStart.scss';
 @import 'cards/cardMenu.scss';
+@import 'cards/cardSkills.scss';
+
+@import 'modules/controller.scss';
 
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
@@ -40,7 +44,7 @@ body{
 #DonTraffic{
     width: 100vw;
     height: 100vh;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -94,22 +98,22 @@ body{
 }
 
 .card__position-bottom {
-    bottom: -30%;
+    bottom: -70vh;
     @include phone {
         bottom: -105%;
     }
 } .card__position-top {
-    top: -30%;
+    top: -70vh;
     @include phone {
         top: -105%;
     }
 } .card__position-right {
-    right: -30%;
+    right: -70vh;
     @include phone {
         right: -105%;
     }
 } .card__position-left {
-    left: -30%;
+    left: -70vh;
     @include phone {
         left: -105%;
     }
