Адаптирован контроллер управления карточками

--- a/assets/style/cards/cardSkills.scss
+++ b/assets/style/cards/cardSkills.scss
@@ -1,5 +1,5 @@
 .card-skills {
     z-index: 3;
-    left: 50%;
-    transform: translate(-50%, 0);
+    left: 0px;
+    transform: translate(0, 0);
 }
