--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -62,7 +62,6 @@ body{
 
     background: #000000;
     border: 1px solid #FFFFFF;
-    box-shadow: 0px 0px 6px #FFFFFF;
     border-radius: 6px;
 
     display: flex;
@@ -83,6 +82,12 @@ body{
         
         width: 100%;
         height: 100%;
+
+        border-radius: 6px;
+    }
+
+    &-shadow{
+        box-shadow: 0px 0px 6px #FFFFFF;
     }
 
     @include phone {
