--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -37,13 +37,12 @@ html *::-webkit-scrollbar-thumb {
 
 body{
     width: 100vw;
-    height: 100vh;
     background-color: #000;
 }
 
 #DonTraffic{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     display: flex;
     justify-content: center;
@@ -92,7 +91,7 @@ body{
 
     @include phone {
         max-width: 100%;
-        height: 100vh;
+        height: 100%;
 
         border: 0px solid #FFFFFF;
         outline: 1px solid #FFFFFF;
