--- a/assets/style/cards/cardMenu.scss
+++ b/assets/style/cards/cardMenu.scss
@@ -40,7 +40,7 @@
 
             padding-top: 6px;
 
-            a {                
+            a{                
                 background: #000000;
                 border: 1px solid #FFFFFF;
                 border-radius: 30px;
@@ -161,15 +161,17 @@
             pointer-events: none;
             position: absolute;
 
-            height: 340px;
-            width: 460px;
+            height: 600px;
+            width: 790px;
 
-            top: -30px;
-            right: -95px;
+            object-fit: contain;
+
+            top: -230px;
+            right: -410px;
 
             @include phone {
-                top: -10px;
-                right: -170px;
+                top: -255px;
+                right: -515px;
             }
 
         }
