--- a/assets/style/modules/controller.scss
+++ b/assets/style/modules/controller.scss
@@ -1,15 +1,15 @@
 .controller{
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 2;
 
     position: absolute;
+    pointer-events: none;
 
     top: 50%;
     left: 50%;
 
     transform: translate(-50%, -50%);
-
     transition: .4s ease;
 
     &__btn-container{
@@ -17,6 +17,7 @@
         overflow: hidden;
 
         padding: 5px;
+        pointer-events: all;
     }
 
     &__btn-left, &__btn-right{
