--- a/assets/style/cards/cardSkills.scss
+++ b/assets/style/cards/cardSkills.scss
@@ -10,6 +10,7 @@
 
     &__content{
         width: 100%;
+        z-index: 2;
 
         &-quote{
             position: absolute;
@@ -20,6 +21,17 @@
             font-weight: 400;
             font-size: 20px;
             line-height: 24px;
+
+            @include phone {
+                max-width: 70%;
+                top: 25%;
+                left: 50%;
+
+                font-size: 16px;
+                text-align: center;
+
+                transform: translate(-50%);
+            }
 
             &-author{
                 margin-top: 16px;
@@ -86,6 +98,7 @@
                     width: 120%;
                     height: 64px;
                     z-index: 2;
+                    pointer-events: none;
                 }
 
             }
@@ -102,26 +115,20 @@
     }
 
     &__background{
+        z-index: 1;
+
         &-sun{
             position: absolute;
             top: 36px;
             right: 36px;
+
+            @include phone {
+                top: 16px;
+                right: 16px;
+            }
+
         }
-    }
 
-    &__dialog{
-        position: absolute;
-        z-index: 10;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-
-        background-color: #000000;
-        border: none;
-        border-radius: 6px;
-
-        padding: 24px;
     }
     
 }
