--- a/assets/style/modules/controller.scss
+++ b/assets/style/modules/controller.scss
@@ -16,97 +16,95 @@
         position: absolute;
         overflow: hidden;
 
-        padding: 5px;
+        padding: 10px;
         pointer-events: all;
     }
 
-    &__btn-left, &__btn-right{
-        width: 36px;
-        height: 105px;
+    &__btn{
+        &-left, &-right{
+            width: 46px;
+            height: 115px;
+    
+            top: 50%;
+            transform: translate(0, -50%);
+    
+            @include phone{
+                width: 51px;
 
-        top: 50%;
-        transform: translate(0, -50%);
-
-        @include phone{
-            width: 44px;
-
-            button{
-                padding: 0 4px;
+                button{
+                    padding: 0 4px;
+                }
             }
-            
+    
         }
-
-    }
-
-        &__btn-left{
-            left: -19px;
+        &-left{
+            left: -23px;
 
             @include phone{
-                left: -10px;                
+                left: -12px;
+
+                .controller__btn{
+                    border-radius: 0px 6px 6px 0;  
+                }
             }
 
             svg{
                 transform: rotate(-90deg);
             }
-
         }
-
-        &__btn-right{
-            right: -19px;
+        &-right{
+            right: -23px;
 
             @include phone{
-                right: -10px;
+                right: -11px;
+
+                .controller__btn{
+                    border-radius: 6px 0px 0px 6px;  
+                }  
             }
 
             svg{
                 transform: rotate(90deg);
             }
-
         }
 
-    &__btn-top, &__btn-bottom{
-        width: 105px;
-        height: 36px;
 
-        right: 50%;
-        transform: translate(50%, 0%);
 
-        @include phone{
-            height: 44px;
+        &-top, &-bottom{
+            width: 105px;
+            height: 36px;
+    
+            right: 50%;
+            transform: translate(50%, 0%);
+    
+            @include phone{
+                height: 44px;
 
-            button{
-                padding: 4px 0;
+                button{
+                    padding: 4px 0;
+                }
             }
-            
+    
         }
-
-    }
-
-        &__btn-top{
-            top: -19px;
-
+        &-top{
+            top: -23px;
             @include phone{
                 top: -10px;
             }
-
             svg{
                 transform: rotate(0deg);
             }
-
         }
-
-        &__btn-bottom{
-            bottom: -19px;
-
+        &-bottom{
+            bottom: -23px;
             @include phone{
                 bottom: -10px;
             }
-
             svg{
                 transform: rotate(180deg);
             }
-
         }
+    }
 
     &__btn{
         height: 100%;
@@ -146,6 +144,12 @@
         height: 95%;
 
         pointer-events: none;
+
+        @include phone {
+            width: 100%;
+            height: 100%;
+        }
+
     }
 
 }
