--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -18,6 +18,7 @@
     font-style: normal;
     font-weight: 300;
     color: #fff;
+    cursor: none;
 }
 
 *::-webkit-scrollbar,
@@ -51,6 +52,27 @@ body{
 
     overflow: hidden;
     position: relative;
+}
+
+#custom-cursor{
+    position: fixed;
+
+    width: 15px;
+    height: 15px;
+
+    background-color: #fff;
+    box-shadow: 0px 0px 6px #FFFFFF;
+    border-radius: 50%;
+
+    pointer-events: none;
+    mix-blend-mode: difference;
+    transform: translate(-50%, -50%);
+
+    z-index: 100;
+
+    @include phone{
+        display: none;
+    }
 }
 
 .card{
