--- a/assets/style/modules/modal.scss
+++ b/assets/style/modules/modal.scss
@@ -70,6 +70,14 @@
 
                 a{
                     font-size: 16px;
+                    text-decoration: none;
+                    border-bottom: 1px solid rgb(0, 0, 0);
+
+                    transition: .4s ease;
+
+                    &:hover{
+                        border-bottom: 1px solid white;
+                    }
                 }
 
                 &::before{
@@ -161,7 +169,6 @@
         }
 
         &:hover{
-            cursor: pointer;
             background-color: #fff;
             .modal__close-icon{
                 fill: #000;
