слайд Скиллы переведён canvas (версия 1), стартовый слайд переведён на vue, убранна адаптация под мобильные устройства

--- a/assets/style/cards/cardSkills.scss
+++ b/assets/style/cards/cardSkills.scss
@@ -10,7 +10,6 @@
 
     &__content{
         width: 100%;
-        z-index: 2;
 
         &-quote{
             position: absolute;
@@ -38,83 +37,7 @@
                 font-style: oblique;
                 display: block;
             }
-
         }
-
-        &-sea{
-            position: absolute;
-            bottom: 0px;
-            border-radius: 6px;
-            overflow: hidden;
-            width: 100%;
-
-            &-wave{
-                position: relative;
-                z-index: 1;
-
-                &-1 {top: 160px; animation: moveWave-1 7s infinite;}
-                &-2 {top: 130px; animation: moveWave-2 9s infinite;}
-                &-3 {top: 100px; animation: moveWave-3 10s infinite;}
-                &-4 {top: 70px; animation: moveWave-4 8.5s infinite;}
-                &-5 {top: 40px; animation: moveWave-5 7.5s infinite;}
-                &-6 {top: 10px; animation: moveWave-6 8s infinite;}
-
-                &-item{
-                    position: absolute;
-                    pointer-events: all;
-                    z-index: 1;
-                    transition: .4s ease;
-
-                    width: 50px;
-                    height: 50px;
-
-                    background: #000000;
-                    border: 1px solid #FFFFFF;
-                    border-radius: 6px;
-
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-
-                    font-weight: 400;
-                    font-size: 15px;
-
-                    &-js{
-                        left: 160px;
-                        top: -10px;
-                        transform: rotate(-2.88deg);
-                    }
-
-                    &:hover{
-                        background: #ffffff;
-                        color: #000000;
-                    }
-
-                }
-
-                &-icon{
-                    position: relative;
-                    width: 120%;
-                    height: 64px;
-                    z-index: 2;
-                    pointer-events: none;
-                }
-
-            }
-
-            @keyframes moveWave-1 { 0%{ left: -30px; } 50% { left: -60px; } 100% { left: -30px; } }
-            @keyframes moveWave-2 { 0%{ left: -60px; } 50% { left: -30px; } 100% { left: -60px; } }
-            @keyframes moveWave-3 { 0%{ left: -10px; } 50% { left: -70px; } 100% { left: -10px; } }
-            @keyframes moveWave-4 { 0%{ left: -50px; } 50% { left: -30px; } 100% { left: -50px; } }
-            @keyframes moveWave-5 { 0%{ left: -20px; } 50% { left: -50px; } 100% { left: -20px; } }
-            @keyframes moveWave-6 { 0%{ left: -10px; } 50% { left: -20px; } 100% { left: -10px; } }
-
-        }
-
-    }
-
-    &__background{
-        z-index: 1;
 
         &-sun{
             position: absolute;
@@ -125,9 +48,14 @@
                 top: 16px;
                 right: 16px;
             }
-
         }
+    }
 
+    &__background{
+        &-sea{
+            position: relative;
+            top: 0;
+        }
     }
     
 }
