--- a/assets/style/modules/modal.scss
+++ b/assets/style/modules/modal.scss
@@ -115,6 +115,7 @@
         &-img{
             width: 121px;
             height: 121px;
+            pointer-events: none;
         }
 
         &-text{
