--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -106,6 +106,10 @@ body{
         height: 100%;
 
         border-radius: 6px;
+
+        &--index-top{
+            z-index: 2;
+        }
     }
 
     &-shadow{
