--- a/assets/style/modals/modalSkill.scss
+++ b/assets/style/modals/modalSkill.scss
@@ -1,45 +1,4 @@
-.modal{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: .4s ease;
-    
-    overflow: hidden;
-    z-index: 10;
-
-    width: calc(100% + 2px);
-    height: calc(100% + 2px);
-
-    background-color: #000000;
-    border: 1px solid #fff;
-    border-radius: 6px;
-
-    padding: 24px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-
-    @include phone {
-        top: calc(50% - 1px);
-        left: calc(50% - 1px);
-
-        width: calc(100% + 4px);
-        height: calc(100% + 4px);
-    }
-
-    &--show{
-        transform: translate(-50%, -50%) scale(1);
-    }
-
-    *{
-        font-weight: 400;
-        font-size: 20px;
-        line-height: 24px;
-    }
-
+.modal-skill{
     &__content{
         width: 100%;
         display: flex;
@@ -52,7 +11,7 @@
         }
 
     }
-
+    
     &__lists{
         display: flex;
         flex-direction: column;
@@ -144,51 +103,4 @@
         }
 
     }
-
-    &__close{
-        position: absolute;
-        top: -1px;
-        right: -1px;
-
-        height: 35px;
-        width: 35px;
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        border: 1px solid #fff;
-        box-shadow: 0px 0px 6px #fff;
-        border-radius: 0px 0px 0px 6px;
-
-        transition: .4s ease;
-
-        @include phone {
-            box-shadow: none;
-            height: 50px;
-            width: 50px;
-        }
-
-        &:hover{
-            background-color: #fff;
-            .modal__close-icon{
-                fill: #000;
-            }
-        }
-
-        &-icon{
-            height: 12px;
-            width: 12px;
-            fill: #fff;
-            transition: .4s ease;
-
-            @include phone {
-                height: 16px;
-                width: 16px;
-            }
-
-        }
-
-    }
-
 }
