--- a/assets/style/cards/cardStart.scss
+++ b/assets/style/cards/cardStart.scss
@@ -12,6 +12,7 @@
         }
 
         h1{
+            font-family: 'Open Sans', sans-serif;
             font-size: 76.29px;
             line-height: 100%;
             font-weight: 400;
@@ -23,10 +24,10 @@
         }
 
         h2{
-            max-width: 245px;
+            max-width: 310px;
             height: 48px;
 
-            font-size: 20px;
+            font-size: 24px;
             line-height: 24px;
             font-weight: 300;
 
@@ -45,10 +46,10 @@
             opacity: 0;
             height: 0;
             padding: 0 24px;
-            border: 0px solid #fff;
+            border: 0px solid $color-white;
 
             border-radius: 3px;
-            background-color: rgb(0, 0, 0);
+            background-color: $color-black;
 
             transition: .4s ease;
             animation: showButton 2s;
@@ -59,12 +60,12 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            color: #fff;
+            color: $color-white;
 
             &:hover{
-                background-color: rgb(255, 255, 255);
-                border: 1px solid #000;
-                color: #000;
+                background-color: $color-white;
+                border: 1px solid $color-black;
+                color: $color-black;
             }
 
             @include phone {
@@ -72,7 +73,7 @@
 
                 height: 42px;
                 opacity: 0;
-                border: 1px solid #fff;
+                border: 1px solid $color-white;
 
                 animation: showButton 2s;
                 animation-delay: 8s;
@@ -85,7 +86,7 @@
             100%{
                 height: 42px;
                 opacity: 1;
-                border: 1px solid #fff;
+                border: 1px solid $color-white;
             } 
         }
         @keyframes showButton-mobile {
