--- a/assets/style/modals/modalSkill.scss
+++ b/assets/style/modals/modalSkill.scss
@@ -30,12 +30,12 @@
                 a{
                     font-size: 16px;
                     text-decoration: none;
-                    border-bottom: 1px solid rgb(0, 0, 0);
+                    border-bottom: 1px solid $color-black;
 
                     transition: .4s ease;
 
                     &:hover{
-                        border-bottom: 1px solid white;
+                        border-bottom: 1px solid $color-white;
                     }
                 }
 
@@ -91,15 +91,15 @@
     &__example{
         width: fit-content;
         text-decoration: none;
-        border: 1px solid #fff;
+        border: 1px solid $color-white;
         border-radius: 6px;
         padding: 8px 16px;
 
         transition: .4s ease;
 
         &:hover{
-            background-color: #fff;
-            color: #000;
+            background-color: $color-white;
+            color: $color-black;
         }
 
     }
