--- a/assets/style/cards/cardMenu.scss
+++ b/assets/style/cards/cardMenu.scss
@@ -41,8 +41,8 @@
             padding-top: 6px;
 
             a{                
-                background: $color-black;
-                border: 1px solid $color-white;
+                background: color-black();
+                border: 1px solid color-white();
                 border-radius: 30px;
 
                 padding: 4px 8px;
@@ -63,7 +63,7 @@
                     width: 16px;
                     height: 16px;
 
-                    fill: $color-white;
+                    fill: color-white();
                 }
 
                 &:nth-child(1) {
@@ -73,11 +73,11 @@
                 }
                 
                 &:hover{
-                    color: $color-black;
-                    background-color: $color-white;
+                    color: color-black();
+                    background-color: color-white();
 
                     svg{
-                        fill: $color-black;
+                        fill: color-black();
                     }
 
                 }
