--- a/assets/style/cards/cardStart.scss
+++ b/assets/style/cards/cardStart.scss
@@ -46,10 +46,10 @@
             opacity: 0;
             height: 0;
             padding: 0 24px;
-            border: 0px solid $color-white;
+            border: 0px solid color-white();
 
             border-radius: 3px;
-            background-color: $color-black;
+            background-color: color-black();
 
             transition: .4s ease;
             animation: showButton 2s;
@@ -60,12 +60,12 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 24px;
-            color: $color-white;
+            color: color-white();
 
             &:hover{
-                background-color: $color-white;
-                border: 1px solid $color-black;
-                color: $color-black;
+                background-color: color-white();
+                border: 1px solid color-black();
+                color: color-black();
             }
 
             @include phone {
@@ -73,7 +73,7 @@
 
                 height: 42px;
                 opacity: 0;
-                border: 1px solid $color-white;
+                border: 1px solid color-white();
 
                 animation: showButton 2s;
                 animation-delay: 8s;
@@ -86,7 +86,7 @@
             100%{
                 height: 42px;
                 opacity: 1;
-                border: 1px solid $color-white;
+                border: 1px solid color-white();
             } 
         }
         @keyframes showButton-mobile {
