--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -1,19 +1,6 @@
 @import 'media.scss';
 @import 'variable.scss';
 
-@import 'cards/cardStart.scss';
-@import 'cards/cardMenu.scss';
-@import 'cards/cardSkills.scss';
-@import 'cards/cardProjects.scss';
-
-@import 'modules/controller.scss';
-
-@import 'modals/modal.scss';
-@import 'modals/modalSkill.scss';
-@import 'modals/modalProject.scss';
-
-
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500&display=swap');
 *{
     margin: 0;
@@ -23,8 +10,8 @@
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 300;
-    color: $color-white;
-    cursor: none;
+    color: color-white();
+    // cursor: none;
 }
 
 *::-webkit-scrollbar,
@@ -33,122 +20,42 @@ html *::-webkit-scrollbar {
 }
 *::-webkit-scrollbar-track,
 html *::-webkit-scrollbar-track {
-    background: $color-white;
+    background: color-white();
     height: 100px;
 }
 *::-webkit-scrollbar-thumb,
 html *::-webkit-scrollbar-thumb {
-    background-color: $color-black;
+    background-color: color-black();
     border-radius: 5px;
-    border: 1px solid $color-white;
+    border: 1px solid color-white();
 }
 
 body{
     width: 100vw;
-    background-color: $color-black;
+    background-color: color-black();
 }
 
-#DonTraffic{
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    overflow: hidden;
-    position: relative;
-}
-
-#custom-cursor{
-    position: fixed;
-
-    width: 15px;
-    height: 15px;
-
-    background-color: $color-white;
-    box-shadow: 0px 0px 6px $color-white;
-    border-radius: 50%;
-
+img{
     pointer-events: none;
-    mix-blend-mode: difference;
-    transform: translate(-50%, -50%);
-
-    z-index: 100;
-
-    @include phone{
-        display: none;
-    }
 }
 
-.card{
-    position: absolute;
-    margin: 0px auto;
-    max-width: 700px;
-    width: 100%;
-    height: 450px;
+// #custom-cursor{
+//     position: fixed;
 
-    background: $color-black;
-    border: 1px solid $color-white;
-    border-radius: 6px;
+//     width: 15px;
+//     height: 15px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+//     background-color: color-white();
+//     box-shadow: 0px 0px 6px color-white();
+//     border-radius: 50%;
 
-    transition: 1s ease;
+//     pointer-events: none;
+//     mix-blend-mode: difference;
+//     transform: translate(-50%, -50%);
 
-    &__content {
-        z-index: 2;
-    }
+//     z-index: 100;
 
-    &__background{
-        z-index: 1;
-
-        position: absolute;
-        overflow: hidden;
-        
-        width: 100%;
-        height: 100%;
-
-        border-radius: 6px;
-
-        &--index-top{
-            z-index: 2;
-        }
-    }
-
-    &-shadow{
-        box-shadow: 0px 0px 6px $color-white;
-    }
-
-    @include phone {
-        max-width: 100%;
-        height: 100%;
-
-        border: 0px solid $color-white;
-        outline: 1px solid $color-white;
-        box-shadow: none;
-        border-radius: 0px;
-
-    }
-}
-
-.card__position{
-    &-bottom { transform: translate(0, calc(100vw + 55%)); }
-    &-top { transform: translate(0, calc(-100vw - 55%)); }
-    &-right { transform: translate(calc(100vw + 55%)); }
-    &-left { transform: translate(calc(-100vw - 55%)); }
-}
-
-.icon-sun{
-    width: 150px;
-    height: 150px;
-    background: $color-white;
-    box-shadow: 0px 0px 6px $color-white;
-    border-radius: 50%;
-}
-
-.text-shadow {
-    text-shadow: -1px 0 $color-black, 0 1px $color-black, 1px 0 $color-black, 0 -1px $color-black;
-}
+//     @include phone{
+//         display: none;
+//     }
+// }
