--- a/assets/style/modules/controller.scss
+++ b/assets/style/modules/controller.scss
@@ -114,9 +114,9 @@
         align-items: center;
         justify-content: center;
 
-        background: $color-black;
-        border: 1px solid $color-white;
-        box-shadow: 0px 0px 6px $color-white;
+        background: color-black();
+        border: 1px solid color-white();
+        box-shadow: 0px 0px 6px color-white();
         border-radius: 6px;
 
         transition: .4s ease;
@@ -124,14 +124,14 @@
         &-svg{
             width: 15px;
             height: 10px;
-            fill: $color-white;
+            fill: color-white();
         }
 
         &:hover{
-            background: $color-white;
+            background: color-white();
 
             .controller__btn-svg{
-                fill: $color-black;
+                fill: color-black();
             }
 
         }
