--- a/assets/style/pages/page-shop.scss
+++ b/assets/style/pages/page-shop.scss
@@ -131,6 +131,11 @@
                     bottom: 16px;
                     left: 16px;
                 }
+
+                &-tools{
+                    bottom: 16px;
+                    right: 16px;
+                }
     
                 &-fullscreen{
                     top: 16px;
@@ -155,7 +160,8 @@
             z-index: 2;
 
             &--show{
-                height: 100%;
+                height: calc(100% - 32px);
+                // height: 100%;
             }
 
             &-item, &-button{
@@ -317,6 +323,165 @@
 
                         .custom__redactor-layers-item-arrow-svg{
                             fill: color-black();
+                        }
+                    }
+                }
+            }
+        }
+
+        &-tools{
+            position: absolute;
+            bottom: 0;
+            right: 0;
+
+            overflow: hidden;
+            overflow-y: scroll;
+
+            height: 45px;
+            transition: .4s ease;
+            background-color: color-black();
+            border: 1px solid color-white();
+            border-radius: 6px;
+
+            z-index: 3;
+
+            width: 300px;
+
+            &--show{
+                height: calc(100% - 32px);
+                // height: 100%;
+            }
+
+            &-item, &-button{
+                border-bottom: 1px solid color-white();
+                background-color: color-black();
+                padding: 8px 16px;
+                font-size: 23.04px;
+                transition: .4s ease;
+            }
+
+            &-button{
+                position: absolute;
+                top: 0;
+                left: 50%;
+                translate: -50% 0%;
+
+                height: 45px;
+
+                display: flex;
+                justify-content: center;
+                width: 100%;
+
+                &:hover{
+                    cursor: pointer;
+                    color: color-black();
+                    background-color: color-white();
+                    border-bottom: 1px solid color-white();
+                }
+            }
+
+            &-items{
+                padding-top: 50px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 16px;
+            }
+
+            &-item{
+                // height: 50px;
+                width: 300px;
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                border-top: 1px solid color-white();
+                position: relative;
+                transition: .4s ease;
+                padding: 8px;
+
+                &-text{
+                    height: 100%;
+
+                    outline: none;
+                    border: none;
+                    background-color: color-white(0);
+                    transition: .4s ease;
+
+                    color: color-white();
+                    font-size: 24px;
+
+                    margin-bottom: 8px;
+
+                    &:hover{
+                        cursor: text;
+                    }
+                }
+
+                &-container{
+                    display: flex;
+                    gap: 18px;
+                    padding-right: 2px;
+
+                    &--grid-3{
+                        display: grid;
+                        grid-template-columns: 1fr 30px 1fr;
+                        justify-items: center;
+                    }
+
+                    &-rotate{
+                        .custom__redactor-tools-item{
+                            &-input{
+                                width: 30%;
+                            }
+
+                            &-interactive{
+                                width: 70%;
+                                accent-color: color-white();
+                            }
+                        }
+                    }
+                }
+                
+                &-input{
+                    border: none;
+                    border-bottom: 1px solid color-white();
+                    background-color: color-black(0);
+                    outline: none;
+                    padding: 0px 4px;
+                    width: 100%;
+                }
+
+                &-btn{
+                    width: 30px;
+                    min-width: 30px;
+                    height: 30px;
+                    min-height: 30px;
+                    padding: 4px;
+
+                    fill: color-white();
+                    background-color: color-white(0);
+                    border: 1px solid color-white();
+                    border-radius: 6px;
+
+                    transition: .4s ease;
+
+                    &:hover{
+                        cursor: pointer;
+                        background-color: color-white();
+                        fill: color-black();
+                    }
+
+                    &--active{
+                        background-color: color-white();
+                        fill: color-black();
+
+                        &:hover{
+                            cursor: pointer;
+                            background-color: color-black();
+                            fill: color-white();
                         }
                     }
                 }
