--- a/assets/style/modals/modalSkill.scss
+++ b/assets/style/modals/modalSkill.scss
@@ -15,6 +15,7 @@
     &__lists{
         display: flex;
         flex-direction: column;
+        justify-content: center;
         gap: 16px;
 
         @include phone {
@@ -62,8 +63,10 @@
     &__info{
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+
+        gap: 24px;
 
         @include phone {
             width: fit-content;
