--- a/assets/style/cards/cardStart.scss
+++ b/assets/style/cards/cardStart.scss
@@ -102,6 +102,21 @@
             width: 100%;
             height: 100%;
         }
+
+        &--mobile{
+            height: 50% !important;
+            width: 170% !important;
+            object-fit: contain;
+            bottom: 0;
+            filter: drop-shadow(0px 5px 5px #e1e1e1);
+            animation: moveGrass 10s infinite;
+        }
+
+        @keyframes moveGrass {
+            0%{transform: skewX(7deg) translate(-7px);}
+            50%{transform: skewX(-7deg) translate(7px);}
+            100%{transform: skewX(7deg) translate(-7px);} 
+        }
     }
 
 }
