--- a/assets/style/modules/controller.scss
+++ b/assets/style/modules/controller.scss
@@ -28,7 +28,7 @@
             top: 50%;
             transform: translate(0, -50%);
     
-            @include phone{
+            @include tablet{
                 width: 51px;
 
                 button{
@@ -40,7 +40,7 @@
         &-left{
             left: -23px;
 
-            @include phone{
+            @include tablet{
                 left: -12px;
 
                 .controller__btn{
@@ -55,7 +55,7 @@
         &-right{
             right: -23px;
 
-            @include phone{
+            @include tablet{
                 right: -11px;
 
                 .controller__btn{
@@ -77,7 +77,7 @@
             right: 50%;
             transform: translate(50%, 0%);
     
-            @include phone{
+            @include tablet{
                 height: 44px;
 
                 button{
@@ -88,7 +88,7 @@
         }
         &-top{
             top: -23px;
-            @include phone{
+            @include tablet{
                 top: -10px;
             }
             svg{
@@ -97,7 +97,7 @@
         }
         &-bottom{
             bottom: -23px;
-            @include phone{
+            @include tablet{
                 bottom: -10px;
             }
             svg{
@@ -142,7 +142,7 @@
         width: 95%;
         height: 95%;
 
-        @include phone {
+        @include tablet {
             width: 100%;
             height: 100%;
         }
