--- a/assets/style/pages/DonTraffic.scss
+++ b/assets/style/pages/DonTraffic.scss
@@ -67,7 +67,7 @@
         box-shadow: 0px 0px 6px color-white();
     }
 
-    @include phone {
+    @include tablet {
         max-width: 100%;
         height: 100%;
 
