Замена слайдера на странице project и маленькая стилизация

--- a/assets/style/cards/cardSkills.scss
+++ b/assets/style/cards/cardSkills.scss
@@ -79,6 +79,10 @@
                     position: absolute;
                     right: 24px;
                     top: 24px;
+
+                    @include tablet{
+                        top: 100px;
+                    }
                 }
 
                 &__wave{
