--- a/assets/style/cards/cardProjects.scss
+++ b/assets/style/cards/cardProjects.scss
@@ -4,16 +4,8 @@
     grid-template-columns: 1fr 1px 1fr;
 
     @include tablet{
-        grid-template-columns: 100%;
+        grid-template-columns: 1fr;
         grid-template-rows: 1fr 1px 1fr;
-    }
-
-    .slider-line--transition, .scroll-thumb--transition{
-        transition: .4s ease;
-    }
-
-    .slider-btn--disable{
-        opacity: 0;
     }
 
     &__preview{
@@ -27,7 +19,7 @@
             bottom: 0;
             right: -70px;
 
-            width: 100%;
+            width: 300px;
             object-fit: cover;
         }
 
@@ -43,65 +35,18 @@
             height: 100%;
         }
 
-        &-line{
+        &-viewport{
+            height: 100%;
+            transition: 1s ease;
+
             display: flex;
             flex-direction: column-reverse;
-
-            @include tablet{
-                height: 100%;
-                width: fit-content;
-                flex-direction: row-reverse;
-            }
         }
     }
 
-    &__center{
-        z-index: 2;
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    &__line{
+        background-color: color-white();
         height: 100%;
-        width: 100%;
-
-        &-line{
-            width: 1px;
-            height: 100%;
-            background-color: color-white();
-
-            @include tablet{
-                width: 100%;
-                height: 1px;
-            }
-        }
-
-        &-scroll{
-            position: absolute;
-            height: 50%;
-            width: 16px;
-            border-radius: 6px;
-            border: 1px solid color-white();
-            background-color: color-black();
-            overflow: hidden;
-
-            @include tablet{
-                height: 16px;
-                width: 50%;
-            }
-
-            &-thumb{
-                width: 100%;
-                height: 100%;
-                background-color: color-white();
-                border: 1px solid color-white();
-                border-radius: 6px;
-
-                &:hover{
-                    cursor: pointer;
-                    background-color: color-black();
-                }
-            }
-        }
     }
 
     &__content{
@@ -112,26 +57,15 @@
         justify-content: center;
         flex-direction: column;
 
-        @include tablet{
-            padding: 74px;
-        }
-
         &-container{
             overflow: hidden;
             position: relative;
             height: 100%;
         }
 
-        &-line{
-            display: flex;
-            flex-direction: column;
-            height: fit-content;
-
-            @include tablet{
-                height: 100%;
-                width: fit-content;
-                flex-direction: row;
-            }
+        &-viewport{
+            height: 100%;
+            transition: 1s ease;
         }
 
         &-logo{
@@ -201,16 +135,6 @@
             left: 50%;
             translate: -50% 0;
 
-            @include tablet{
-                top: 50%;
-                left: 16px;
-                translate: 0 -50%;
-
-                .card-projects__content-controll-svg{
-                    rotate: -90deg;
-                }
-            }
-
             &:hover{
                 background-color: color-white();
 
@@ -225,17 +149,6 @@
 
                 .card-projects__content-controll-svg{
                     rotate: 180deg;
-                }
-
-                @include tablet{
-                    top: 50%;
-                    left: auto;
-                    right: 16px;
-                    translate: 0 -50%;
-
-                    .card-projects__content-controll-svg{
-                        rotate: 90deg;
-                    }
                 }
             }
 
