--- a/assets/style/cards/cardProjects.scss
+++ b/assets/style/cards/cardProjects.scss
@@ -143,7 +143,7 @@
                 }
             }
 
-            &-bottom{
+            &--bottom{
                 top: auto;
                 bottom: 16px;
 
