--- a/assets/style/pages/DonTraffic.scss
+++ b/assets/style/pages/DonTraffic.scss
@@ -67,6 +67,13 @@
         box-shadow: 0px 0px 6px color-white();
     }
 
+    &--position{
+        &-bottom { transform: translate(0, calc(100vw + 55%)); }
+        &-top { transform: translate(0, calc(-100vw - 55%)); }
+        &-right { transform: translate(calc(100vw + 55%)); }
+        &-left { transform: translate(calc(-100vw - 55%)); }
+    }
+
     @include tablet {
         max-width: 100%;
         height: 100%;
@@ -77,13 +84,6 @@
         border-radius: 0px;
 
     }
-}
-
-.card__position{
-    &-bottom { transform: translate(0, calc(100vw + 55%)); }
-    &-top { transform: translate(0, calc(-100vw - 55%)); }
-    &-right { transform: translate(calc(100vw + 55%)); }
-    &-left { transform: translate(calc(-100vw - 55%)); }
 }
 
 .icon-sun{
