--- a/assets/style/pages/pages.scss
+++ b/assets/style/pages/pages.scss
@@ -15,7 +15,7 @@
     border: 1px solid color-white();
     border-radius: 6px;
 
-    &-title{
+    &__title{
         font-size: $font-size-medium;
         text-align: center;
         margin-bottom: 16px;
