--- a/assets/style/pages/DonTraffic.scss
+++ b/assets/style/pages/DonTraffic.scss
@@ -12,7 +12,9 @@
 @import '../modals/modalSkill.scss';
 @import '../modals/modalProject.scss';
 
-
+// body{
+//     overflow: hidden;
+// }
 
 #DonTraffic{
     width: 100%;
