--- a/assets/style/pages/pages.scss
+++ b/assets/style/pages/pages.scss
@@ -6,14 +6,21 @@
 .wrapper{
     max-width: $max-width;
     margin: 0 auto;
+
+    @include laptopL{
+        padding: 0px 16px;
+    }
+}
+
+.border{
+    border: 1px solid color-white();
+    border-radius: 6px;
+    box-shadow: 0px 0px 6px color-white();
 }
 
 .block{
     margin: 16px 0;
-    box-shadow: 0px 0px 6px color-white();
     padding: 16px;
-    border: 1px solid color-white();
-    border-radius: 6px;
 
     &__title{
         font-size: $font-size-medium;
@@ -21,5 +28,19 @@
         margin-bottom: 16px;
         padding-bottom: 16px;
         border-bottom: 1px solid color-white();
+    }
+
+    &__double{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 16px;
+
+        &-content{
+            width: 100%;
+        }
+
+        &-img{
+            width: 100%;
+        }
     }
 }
